Bug 1697091 - Ensure ResizeDirectManipulationViewport called on move/resize r=tnikkel

We were skipping the initial ResizeDirectManipulationViewport call when the
skeleton UI showed a maximized window, because it pseudo-ignores the first
Move/Resize in order to not break the maximization. There's no reason
ResizeDirectManipulationViewport should have been in the else clause - it just
wasn't properly considered.

Differential Revision: https://phabricator.services.mozilla.com/D108849